# notification-bot-tg

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
services/AirflowService/: arrow_utils.py  config.py  pyproject.toml
services/AirflowService/dags/: archive_notifications.py  cleanup_old_archives.py  scheduled_summary.py
services/BotService/: .env.example  README.md  db_client.py  kafka_consumer.py  kafka_producer_example.py  main.py  ml_client.py  pyproject.toml  redis_cache.py
services/CoreService/: build.gradle.kts  settings.gradle.kts
services/CoreService/src/main/kotlin/boysband/coreservice/: CoreServiceApplication.kt
services/CoreService/src/main/resources/: application.yml
services/DBService/: .dockerignore  build.gradle.kts  docker-compose.yml  settings.gradle.kts
services/DBService/init-db/: 01-init-schema.sql  02-add-stackoverflow.sql
services/DBService/src/main/resources/: application.properties
services/GithubService/: build.gradle.kts  settings.gradle.kts
services/GithubService/src/main/resources/: application.properties
services/MLService/: .gitignore  README.md  config.py  data.py  evaluate.py  main.py  pyproject.toml  run.sh  server.py  train.py
services/MLService/results/: metrics.json  predictions.jsonl
services/MLService/results/adapters/: adapter_config.json
services/MLService/results/data/: train.jsonl  valid.jsonl
services/StackoverflowService/: .env.example  build.gradle.kts  docker-compose.yml  settings.gradle.kts
services/StackoverflowService/src/main/resources/: application.properties  application.yml
(+126 files in other folders)
