[project]
name = "botservice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.0",
    "python-dotenv>=1.0",
    "httpx>=0.27.0",
    "aiokafka>=0.11.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# BotService uses a flat layout (several top-level .py files).
# Explicitly list them to avoid setuptools auto-discovery errors.
py-modules = [
    "main",
    "db_client",
    "kafka_consumer",
    "kafka_producer_example",
]
