[project]
name = "mlservice"
version = "1.0.0"
description = "GitHub Issues Summarization"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.21.0",
    "mlx-lm>=0.19.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.20.0",
    "rouge-score>=0.1.2",
    "numpy>=1.26.0",
    "tqdm>=4.65.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]
